# meta-analysis

./: .gitignore  AI meta analysis.ipynb  README.md  package-lock.json  pyproject.toml
.github/workflows/: backend-ci.yml  be3_meta-analysis.yml  ci-pipeline.yml  ci-pipline.yml  frontend-ci.yml  main_meta-analysis.yml
app/: __init__.py  chatgpt_client.py  processor.py  routes.py
backend/: .env  Dockerfile  __init__.py  api_client.py  app.py  chatgpt_client.py  config.py  db_connection.py  document.py  generate_secret_key.py  login.py  main.py  models.py  paper_processing.py  pdf_utils.py  post-deployment-script.sh  redis.txt  requirements.txt  routes.py  utils.py  version.py
backend/app/: config.py  routes.py
backend1/: .gitignore  README.md  main.py
backend1/models/: scibert.py
backend1/routes/: scibert.py  semanticscholar.py
be1-api-and-scibert/: .env  .gitignore  API_DOC.md  Dockerfile  README.md  frontend_api_code.md  main.py  new_requirements.txt  package-lock.json  requirements.txt
be1-api-and-scibert/controllers/: bert.py  scibert.py  semanticscholar.py
be1-api-and-scibert/data/: bert_config.py  scibert_config.py
be1-api-and-scibert/models/: metadata.json  paper_data.py  paper_data_labeled.csv  paper_metadata.py  pico_dict.py  pico_request.py  scibert.py  train_bert.ipynb  train_bert_v2.ipynb  train_bert_v3.ipynb  train_scibert.ipynb
meta-analysis-app/: .gitignore  package-lock.json  package.json  tailwind.config.js  webpack.config.js
meta-analysis-app/src/: App.js  (+1 more)
meta-analysis-ui/: README.md  angular.json  package-lock.json  package.json
(+112 files in other folders)
